[package]
name = "paginegialle-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.3.1"
deunicode = "1.6.0"
futures = "0.3.31"
reqwest = "0.12.12"
scraper = "0.23.1"
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
